--- a/Dashboard/frontend/index.html
+++ b/Dashboard/frontend/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <script crossorigin src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
