--- a/Dashboard/frontend/index.html
+++ b/Dashboard/frontend/index.html
@@ -8,8 +8,8 @@
   </head>
   <body >
     <div id="root"></div>
-    <script crossorigin src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="index.js"></script>
   </body>
