--- a/Dashboard/frontend/index.html
+++ b/Dashboard/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Systemge Dashboard</title>
     <meta name="Description" CONTENT="Systemge Dashboard">
-    <link rel="icon" href="https://nodge.s3.eu-central-1.amazonaws.com/ico.ico" type="image/x-icon" />
+    <link rel="icon" href="ico.ico" type="image/x-icon" />
   </head>
   <body >
     <div id="root"></div>
