--- a/DashboardServer/frontend/index.html
+++ b/DashboardServer/frontend/index.html
@@ -11,6 +11,6 @@
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index/index.js"></script>
   </body>
 </html>
