--- a/DashboardServer/frontend/index.html
+++ b/DashboardServer/frontend/index.html
@@ -6,6 +6,12 @@
     <meta name="Description" CONTENT="Systemge Dashboard">
     <link rel="icon" href="ico.ico" type="image/x-icon" />
   </head>
+  <style>
+    body {
+        padding: 0;
+        margin: 0;
+    }
+  </style>
   <body >
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"></script>
