--- a/DashboardServer/frontend/index.html
+++ b/DashboardServer/frontend/index.html
@@ -5,13 +5,8 @@
     <title>Systemge Dashboard</title>
     <meta name="Description" CONTENT="Systemge Dashboard">
     <link rel="icon" href="ico.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
   </head>
-  <style>
-    body {
-        padding: 0;
-        margin: 0;
-    }
-  </style>
   <body >
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"></script>
